// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Nav component > should match a snapshot 1`] = `
<DocumentFragment>
  <nav
    class="mocked-styled-2 el-nav-container"
  />
</DocumentFragment>
`;

exports[`NavItem component > should match a snapshot 1`] = `
<DocumentFragment>
  <a
    class="mocked-styled-4 el-nav-item"
  />
</DocumentFragment>
`;

exports[`NavItem component > should match a snapshot for a secondary item 1`] = `
<DocumentFragment>
  <a
    class="el-nav-item-secondary el-nav-item"
  />
</DocumentFragment>
`;

exports[`NavSubNav component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-nav-sub-container"
  />
</DocumentFragment>
`;

exports[`NavSubNavItem component > should match a snapshot 1`] = `
<DocumentFragment>
  <a
    class="mocked-styled-5 el-nav-sub-item"
  />
</DocumentFragment>
`;
